--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -73,7 +73,7 @@
           Buy Now
         </button>
         <button
-          class="btn border-none bg-white text-white hover:bg-orange-50 w-[194px] rounded-full border-solid border-2 border-orange-600 hover:border-orange-600 text-orange-600"
+          class="btn bg-white text-orange-600 hover:bg-orange-50 w-[194px] rounded-full border-solid border-2 border-orange-600 hover:border-orange-600 text-orange-600"
         >
           Add tocart
         </button>
