--- a/src/app/hero1/hero1.component.html
+++ b/src/app/hero1/hero1.component.html
@@ -1,11 +1,17 @@
-<div class="hero h-[320px]">
+<div class="hero h-[200px] md:h-[260px] lg:h-[320px] w-full">
   <div class="hero-content text-center text-neutral-content text-slate-100">
-    <div class="w-fit">
-      <div class="w-full flex flex-col items-start gap-2">
-        <h1 class="mb-5 text-5xl font-bold leading-20 tracking-wider">
+    <div class="w-full">
+      <div
+        class="w-full flex flex-col items-center md:items-start lg:items-start gap-2"
+      >
+        <h1
+          class="mb-5 text-3xl md:text-5xl lg:text-5xl font-bold leading-20 tracking-wider"
+        >
           Up to 60% off on all items
         </h1>
-        <h1 class="mb-5 text-5xl font-bold leading-20 tracking-wider">
+        <h1
+          class="mb-5 text-3xl md:text-5xl lg:text-5xl font-bold leading-20 tracking-wider"
+        >
           till September 11
         </h1>
 
