--- a/src/app/order-summary/order-summary.component.html
+++ b/src/app/order-summary/order-summary.component.html
@@ -1,42 +1,48 @@
 <div
-  class="h-[1200px] bg-white text-slate-600 hero2 w-full px-[112px] py-12 flex flex-col gap-4"
+  class="h-full bg-white text-slate-600 hero2 w-full px-[20px] md:px-[40px] lg:px-[112px] xl:px-[112px] 2xl:px-[112px] py-12 flex flex-col gap-4"
 >
   <!-- Order Summary -->
-  <div class="grid grid-cols-12 gap-4">
+  <div class="flex flex-col lg:grid grid-cols-12 gap-4">
     <div class="col-span-8 flex flex-col gap-4">
       <div
         class="col-span-8 border-2 border-solid border-slate-100 h-[410px] rounded-xl p-8 overflow-hidden overflow-y-auto"
       >
-        <h1 class="text-2xl font-semibold">Order Summary</h1>
-        <div class="h-[410px] bg-white text-slate-600 hero2 w-full">
-          <div class="grid grid-cols-5 w-full items-center">
+        <h1 class="text-2xl font-semibold mb-4">Order Summary</h1>
+        @for (product of
+        addToCartService.productBuyNow().length>0?addToCartService.productBuyNow():addToCartService.cartList()
+        ; track $index) {
+        <div class="bg-white text-slate-600 hero2 w-full">
+          <div class="grid grid-cols-5 w-full items-center gap-4">
             <figure class="col-span-1">
-              <img src="{{ summaryProduct?.img }}" />
+              <img class="rounded-md" src="{{ product.product.img }}" />
             </figure>
             <div class="col-span-4 flex items-start justify-between gap-4">
               <h2
                 class="card-title text-base text-slate-800 w-[291px] text-wrap"
               >
-                {{ summaryProduct?.name }}
+                {{ product.product.name }}
               </h2>
               <div class="flex flex-col gap-2 items-end">
                 <p class="card-subtitle font-md text-lg">
-                  Qty : {{ quantity }}
+                  Qty : {{ product.quantity }}
                 </p>
                 <p class="card-subtitle font-bold text-lg text-slate-800">
-                  ${{ totalPrice }}
+                  ${{ product.quantity * product.product.price }}
                 </p>
               </div>
             </div>
           </div>
           <div class="w-full h-0.5 bg-slate-100 text-slate-800 my-4"></div>
         </div>
+        }
       </div>
       <!-- Delivery information -->
       <div class="">
         <div class="border-2 border-solid border-slate-100 rounded-xl p-8">
           <h1 class="mb-4 text-2xl font-semibold">Delivery Information</h1>
-          <div class="grid grid-cols-8 grid-rows-3 gap-4">
+          <div
+            class="flex flex-col md:grid lg:grid xl:grid 2xl:grid grid-cols-8 grid-rows-3 gap-4"
+          >
             <!-- Left forms -->
             <label
               class="col-span-4 text-sm text-slate-600 input bg-white input-bordered border-slate-200 flex items-center gap-2"
@@ -93,9 +99,13 @@
         <p class="font-medium text-base">Apply Discount</p>
         <div class="flex w-full gap-4">
           <label
-            class="rounded-full bg-slate-50 w-full text-sm text-slate-600 input bg-white flex items-center gap-2"
+            class="rounded-full bg-slate-100 w-full text-sm text-slate-600 input bg-white flex items-center gap-2"
           >
-            <input type="text" class="grow" placeholder="Enter Coupon Code" />
+            <input
+              type="text"
+              class="grow bg-slate-100"
+              placeholder="Enter Coupon Code"
+            />
           </label>
           <button
             class="btn border-none bg-orange-600 text-white hover:bg-orange-500 w-fit rounded-full"
@@ -105,30 +115,26 @@
         </div>
         <div class="w-full h-0.5 bg-slate-100 text-slate-800 my-4"></div>
         <!-- Pay with -->
-        <div>
-          <p class="font-medium text-base">Pay With</p>
-
-          <div class="form-control">
-            <label class="label cursor-pointer w-[180px]">
-              <input
-                type="radio"
-                name="debit"
-                class="radio checked:bg-orange-500 w-[20px] h-[20px] checked:ring-offset-white"
-                checked
-              />
-              Debit or Credit Card
-            </label>
-          </div>
-          <div class="form-control">
-            <label class="label cursor-pointer w-[150px]">
-              <input
-                type="radio"
-                name="radio-10"
-                class="radio checked:bg-orange-500 w-[20px] h-[20px]"
-              />
-              Pay on Delivery
-            </label>
-          </div>
+        <div class="form-control">
+          <label class="label cursor-pointer w-[180px]">
+            <input
+              type="radio"
+              name="payment-method"
+              class="radio checked:bg-orange-500 w-[20px] h-[20px] checked:ring-offset-white"
+              checked
+            />
+            <span class="label-text"> Debit or Credit Card</span>
+          </label>
+        </div>
+        <div class="form-control">
+          <label class="label cursor-pointer w-[150px]">
+            <input
+              type="radio"
+              name="payment-method"
+              class="radio checked:bg-orange-500 w-[20px] h-[20px]"
+            />
+            <span class="label-text"> Pay on Delivery</span>
+          </label>
         </div>
         <div class="w-full h-0.5 bg-slate-100 text-slate-800 my-4"></div>
         <!-- Payment Information -->
@@ -164,11 +170,13 @@
           <div class="flex flex-col gap-4">
             <div class="flex justify-between">
               <p class="font-normal text-sm">Sub Total</p>
-              <p class="font-normal text-sm">${{ totalPrice }}</p>
+              <p class="font-normal text-sm">${{ totalProductPrice }}</p>
             </div>
             <div class="flex justify-between">
               <p class="font-normal text-sm">Tax (10%)</p>
-              <p class="font-normal text-sm">${{ totalPrice * (10 / 100) }}</p>
+              <p class="font-normal text-sm">
+                ${{ totalProductPrice * (10 / 100) }}
+              </p>
             </div>
             <div class="flex justify-between">
               <p class="font-normal text-sm">Shipping</p>
@@ -179,9 +187,7 @@
           <div class="flex flex-col gap-8">
             <div class="flex justify-between">
               <p class="font-medium text-sm">Total</p>
-              <p class="font-normal text-sm">
-                ${{ totalPrice + totalPrice * (10 / 100) }}
-              </p>
+              <p class="font-normal text-sm">${{ total }}</p>
             </div>
             <button
               class="btn border-none bg-orange-600 text-white hover:bg-orange-500 w-full rounded-full"
