--- a/src/app/landing-page/header/header.component.html
+++ b/src/app/landing-page/header/header.component.html
@@ -1,27 +1,23 @@
 <!-- Header -->
 <div
-  class="navbar bg-base-100 flex w-full justify-between px-[112px] bg-transparent"
+  class="navbar bg-base-100 flex w-full justify-between px-[20px] md:px-[40px] lg:px-[112px] xl:px-[112px] 2xl:px-[112px] bg-transparent"
 >
   <div class="w-[100px] flex justify-center items-center">
-    <div class="cursor-pointer" [routerLink]="['/']">
+    <div class="cursor-pointer flex gap-2" [routerLink]="['/']">
+      <!-- <mat-icon class="transform scale-600" svgIcon="logo-raymo"></mat-icon> -->
+
+      <!-- <mat-icon class="transform scale-200" svgIcon="logo-rayna2"></mat-icon> -->
       <!-- <mat-icon class="transform scale-400" svgIcon="logo-mono4"></mat-icon> -->
-      <mat-icon class="transform scale-600" svgIcon="logo-rayna"></mat-icon>
-      <!-- <img src="assets/image/mono4-high-resolution-logo-white-transparent.png" /> -->
+      <!-- <mat-icon class="transform scale-600" svgIcon="logo-rayna"></mat-icon> -->
+      <img
+        src="assets/image/mono4-high-resolution-logo-white-transparent.png"
+      />
     </div>
   </div>
 
-  <div class="">
+  <div class="p-0">
     <ul class="menu menu-horizontal px-1">
       <li><a class="font-medium">Login / Sign up</a></li>
-      <li>
-        <details>
-          <summary>Parent</summary>
-          <ul class="p-2 bg-base-100 rounded-t-none">
-            <li><a>Link 1</a></li>
-            <li><a>Link 2</a></li>
-          </ul>
-        </details>
-      </li>
     </ul>
   </div>
 </div>
