--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,10 +1,14 @@
-<div class="h-[1200px] bg-white text-slate-600 hero2 w-full px-[112px] py-12">
-  <div class="grid grid-cols-5 w-full justify-between">
+<div
+  class="h-[1200px] bg-white text-slate-600 hero2 w-full px-[20px] md:px-[40px] lg:px-[112px] xl:px-[112px] 2xl:px-[112px] py-12"
+>
+  <div
+    class="flex flex-col md:grid lg:grid xl:grid 2xl:grid grid-cols-5 gap-8 w-full justify-between"
+  >
     <figure class="col-span-2">
-      <img src="{{ selectProduct?.img }}" />
+      <img class="rounded-2xl" src="{{ selectProduct?.img }}" />
     </figure>
     <div class="col-span-3 flex flex-col gap-4">
-      <h2 class="card-title text-3xl text-slate-800">
+      <h2 class="card-title lg:text-3xl text-slate-800">
         {{ selectProduct?.name }}
       </h2>
       <p class="text-slate-400">{{ selectProduct?.description }}</p>
@@ -48,35 +52,49 @@
           Suggested payments with 6 months special financing
         </p>
       </div>
-      <div class="w-full h-0.5 bg-slate-100 text-slate-800 mt-2 mb-1"></div>
-      <p class="card-subtitle font-semibold text-base">Quantity</p>
-      <div class="join">
-        <button
-          class="join-item btn rounded-l-full"
-          (click)="decreaseQuantity()"
+      <div class="mt-auto flex flex-col gap-8">
+        <div class="w-full h-0.5 bg-slate-100 text-slate-800 mt-2 mb-1"></div>
+        <div
+          class="flex justify-center md:justify-start lg:justify-start xl:justify-start 2xl:justify-start items-center gap-4"
         >
-          -
-        </button>
-        <button class="join-item btn text-orange-600">{{ quantity }}</button>
-        <button
-          class="join-item btn text-orange-600 rounded-r-full"
-          (click)="increaseQuantity()"
+          <p class="card-subtitle font-semibold text-base">Quantity</p>
+          <div class="join">
+            <button
+              class="join-item btn rounded-l-full bg-slate-100 border-none hover:bg-slate-200"
+              (click)="decreaseQuantity()"
+            >
+              -
+            </button>
+            <button
+              class="join-item btn text-orange-600 bg-slate-100 border-none hover:bg-slate-200"
+            >
+              {{ quantity }}
+            </button>
+            <button
+              class="join-item btn text-orange-600 rounded-r-full bg-slate-100 border-none hover:bg-slate-200"
+              (click)="increaseQuantity()"
+            >
+              +
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card-actions flex flex-col gap-4 md:flex-row lg:flex-row xl:flex-row 2xl:flex-row items-center lg:items-start"
         >
-          +
-        </button>
-      </div>
-      <div class="card-actions">
-        <button
-          class="btn border-none bg-orange-600 text-white hover:bg-orange-500 w-[194px] rounded-full"
-          (click)="navigateToSummary(selectProduct)"
-        >
-          Buy Now
-        </button>
-        <button
-          class="btn bg-white text-orange-600 hover:bg-orange-50 w-[194px] rounded-full border-solid border-2 border-orange-600 hover:border-orange-600 text-orange-600"
-        >
-          Add tocart
-        </button>
+          <button
+            class="btn border-none bg-orange-600 text-white hover:bg-orange-500 w-[194px] rounded-full"
+            (click)="buyNow(selectProduct, quantity)"
+          >
+            Buy Now
+          </button>
+          <button
+            class="btn bg-white text-orange-600 hover:bg-orange-50 w-[194px] rounded-full border-solid border-2 border-orange-600 hover:border-orange-600 text-orange-600"
+            (click)="addToCart(selectProduct, quantity)"
+          >
+            Add tocart
+          </button>
+        </div>
       </div>
     </div>
   </div>
